# fastapi-vue-mysql-base-project

./: README.md  docker-compose.yml  envtemplate
backend/: backend.dockerfile
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: e2a20fbf9fa4_added_table.py
backend/app/app/core/: config.py
backend/app/app/models/: item.py  user.py
backend/db/: my.cnf
frontend/: Dockerfile  package-lock.json  package.json
