[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.9.1"
raven = "^6.10.0"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
SQLAlchemy = "^1.4.37"
PyMySQL = "^1.0.2"
PyJWT = "^2.4.0"
python-jose = "^3.3.0"
emails = "^0.6"
celery = "^5.2.7"
install = "^1.3.5"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
